[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/enemyMorningStar/enemyMorningStar.gd" type="Script" id=1]
[ext_resource path="res://resources/animActorDead.tres" type="Animation" id=2]
[ext_resource path="res://resources/animActorEntering.tres" type="Animation" id=3]
[ext_resource path="res://resources/animActorIdle.tres" type="Animation" id=4]
[ext_resource path="res://resources/animActorWalk.tres" type="Animation" id=5]
[ext_resource path="res://resources/Sprites/Shadow1.png" type="Texture" id=6]
[ext_resource path="res://resources/Sprites/Enemy3_24x25.png" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 10 )

[sub_resource type="RectangleShape2D" id=2]

[node name="enemyMorningStar" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/animActorDead = ExtResource( 2 )
anims/animActorEntering = ExtResource( 3 )
anims/animActorIdle = ExtResource( 4 )
anims/animActorWalk = ExtResource( 5 )

[node name="twnGray" type="Tween" parent="."]

[node name="twnEnter" type="Tween" parent="."]

[node name="twnDespawn" type="Tween" parent="."]

[node name="tmrDespawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="spriteShadow" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
vframes = 2
hframes = 14
frame = 8

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="area2D" type="Area2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 63, 0 )
shape = SubResource( 2 )

[node name="sprite" type="Sprite" parent="area2D/collisionShape2D"]
position = Vector2( 9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 8 )
[connection signal="tween_completed" from="twnEnter" to="." method="_on_twnEnter_tween_completed"]
[connection signal="tween_completed" from="twnDespawn" to="." method="_on_twnDespawn_tween_completed"]
[connection signal="timeout" from="tmrDespawn" to="." method="_on_tmrDespawn_timeout"]
